cmake_minimum_required(VERSION 3.0)
project(CodingInternetReview)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CodingInternetReview 04_FindInPartiallySortedMatrix.cc)
#add_executable(CodingInternetReview 05_ReplaceStringSpaces.cc)
#add_executable(CodingInternetReview 04_FindInPartiallySortedMatrix.cc)
add_executable(Code 06_PrintListInReversedOrder.cc)